--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.udafil.dhruvamsharma.bakingandroidapp"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -57,5 +57,8 @@ dependencies {
     /* Parceler */
     implementation 'org.parceler:parceler-api:1.1.11'
     annotationProcessor 'org.parceler:parceler:1.1.11'
+
+    /* Material Design Stepper */
+    implementation 'com.ernestoyaquello.stepperform:vertical-stepper-form:0.9.9'
 
 }
