shared preferences added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,8 @@ android {
         dataBinding {
             enabled true
         }
+
+        resValue 'string', 'package_name', android.defaultConfig.applicationId
     }
     buildTypes {
         release {
