--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,9 @@ dependencies {
     implementation group: 'com.android.support.test.espresso', name: 'espresso-contrib', version: '3.0.2'
 
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+
 }
